--- a/basics/index.html
+++ b/basics/index.html
@@ -4,15 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
     <style>
         div{
+            /*un selector de tipo*/
             background: blue;
         }
+        .container{
+            /*selector de elemento*/
+            background: salmon;
+            width: 200px;
+            height: 200px;
+        }
+        #identificador{
+            /*selector de ID*/
+            color:whitesmoke;
+            text-decoration:none;
+        }
+        .button{
+            background:plum;
+            width: 100px;
+            height: 100px;
+            align-content: center;
+        }
+        button{
+            background:aquamarine;
+            width: 50px;
+            height: 50px;
+        }
+
     </style>
 </head>
 <body>
     <div>
-
+        <h1>Universidad Autonoma de Occidente</h1>
     </div>
+    <div class="container">
+        <h2> Experiencias Multimedia</h2>
+        <a  id="identificador" href="https://www.google.com">google</a>
+    </div>
+    <div class="button">
+        <button>enviar</button>
+    </div>
+
 </body>
 </html>
